--- a/templates/partials/barra_navegacao.html
+++ b/templates/partials/barra_navegacao.html
@@ -53,13 +53,10 @@
           <a class="dropdown-item" href="{% url 'cadastrar_computador' %}">Computador</a>
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" href="{% url 'cadastrar_marca' %}">Marca</a>
-          <a class="dropdown-item" href="{% url 'listar_marcas' %}">Listar Marcas</a> 
           <div class="dropdown-divider"></div>                   
           <a class="dropdown-item" href="{% url 'cadastrar_software' %}">Software</a>
-          <a class="dropdown-item" href="{% url 'listar_softwares' %}">Listar Softwares</a>           
           <div class="dropdown-divider"></div>          
           <a class="dropdown-item" href="{% url 'cadastrar_sistema_operacional' %}">Sistema Operacional</a>
-          <a class="dropdown-item" href="{% url 'listar_sistemas_operacionais' %}">Listar Sistema Operacionais</a>                     
           <div class="dropdown-divider"></div>        
         </div>
       </li>
@@ -86,10 +83,17 @@
           <a class="dropdown-item" href="{% url 'listar_usuarios' %}">Listar Usuários</a>    
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" href="{% url 'ocorrencias_equipamentos' %}">Equipamentos</a>  
+          <a class="dropdown-item" href="{% url 'listar_marcas' %}">Listar Marcas</a> 
+          <a class="dropdown-item" href="{% url 'listar_softwares' %}">Listar Softwares</a>           
+          <a class="dropdown-item" href="{% url 'listar_sistemas_operacionais' %}">Listar Sistema Operacionais</a>                     
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" href="{% url 'ocorrencias_equipamentos' %}">Ocorrências</a>  
         </div>
       </li>
+      <!-- MENU AJUDA -->
+      <li class="nav-item">
+        <a class="nav-link" href="#">Ajuda</a>
+      </li>      
       <!-- MENU SAIR -->
       <li class="nav-item">
         <a class="nav-link" href="#">Sair</a>
