--- a/usuarios/templates/cadastrar_usuario.html
+++ b/usuarios/templates/cadastrar_usuario.html
@@ -8,48 +8,58 @@
 
 
 {% block 'body' %}
+{% include "partials/barra_navegacao.html" %}
 
-    {% include "partials/barra_navegacao.html" %}
-
-    <div class="container">
-        <br>
-        <br>
-        <p class="h2">Cadastro de Usuário</p>
-        {% if messages %}
-            {% for message in messages %}
-                <section class="alert {{message.tags}}">
-                    {{message}}
-                </section>
-            {% endfor %}
-        {% endif %}
-        <div class="row">
-            <div class="col-md">
-                <form action="{% url 'cadastrar_usuario' %}" method="POST" enctype='multipart/form-data'>{% csrf_token %}
-                <label>Nome do Colaborador:</label>
-                <input type="text" name="nome_usuario" placeholder="Digite o nome do colaborador ..." class="form-control">
-                <br>
-                <label>E-mail:</label>
-                <input type="text" name="email" placeholder="Digite o email ..." class="form-control">
-                <br>
-                <label>Selecione o Setor:</label>
-                <br>
-                <select name="setor" class="form-control">
-                    {% for setor in setores %}
-                        <option value="{{ setor.id }}">{{ setor.nome_setor }}</option>
-                    {% endfor %}
-                </select>
-                <br>
-                <label>Status:</label>
-                <br>
-                <select name="status" class="form-control" disabled="True">
-                    {% for i in status %}
-                        <option value="{{ i.0 }}">{{ i.1 }}</option>
-                    {% endfor %}
-                </select>
-                <br>
-                <input type="submit" class="btn btn-lg btn-indigo" value="cadastrar">
-                </form>
+<div class="container my-5">
+    <h2 class="mb-4">Cadastro de Usuário</h2>
+    
+    {% if messages %}
+        {% for message in messages %}
+            <div class="alert {{ message.tags }} alert-dismissible fade show" role="alert">
+                {{ message }}
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
             </div>
+        {% endfor %}
+    {% endif %}
+
+    <div class="row">
+        <div class="col-md-8">
+            <form action="{% url 'cadastrar_usuario' %}" method="POST" enctype="multipart/form-data">
+                {% csrf_token %}
+                
+                <div class="form-group">
+                    <label for="nome_usuario">Nome do Colaborador:</label>
+                    <input type="text" id="nome_usuario" name="nome_usuario" class="form-control" placeholder="Digite o nome do colaborador..." required>
+                </div>
+
+                <div class="form-group">
+                    <label for="email">E-mail:</label>
+                    <input type="email" id="email" name="email" class="form-control" placeholder="Digite o email..." required>
+                </div>
+
+                <div class="form-group">
+                    <label for="setor">Selecione o Setor:</label>
+                    <select id="setor" name="setor" class="form-control" required>
+                        {% for setor in setores %}
+                            <option value="{{ setor.id }}">{{ setor.nome_setor }}</option>
+                        {% endfor %}
+                    </select>
+                </div>
+
+                <div class="form-group">
+                    <label for="status">Status:</label>
+                    <select id="status" name="status" class="form-control" disabled>
+                        {% for i in status %}
+                            <option value="{{ i.0 }}">{{ i.1 }}</option>
+                        {% endfor %}
+                    </select>
+                </div>
+
+                <button type="submit" class="btn btn-lg btn-primary">Cadastrar</button>
+            </form>
         </div>
     </div>
+</div>
 {% endblock 'body' %}
