--- a/usuarios/templates/listar_usuarios.html
+++ b/usuarios/templates/listar_usuarios.html
@@ -8,33 +8,38 @@
 {% endblock 'head' %}
 
 {% block 'body' %}
-    {% include "partials/barra_navegacao.html" %}
-    <br>
-    <br>
-    <div class="container dark-color container_empresas">
-        <table class="table">
-            <thead >
-              <tr class="cabecalho" style="background-color: transparent !important;">
-                <th class="cabecalho" scope="col">Id</th>
-                <th class="cabecalho" scope="col">Nome </th>                
-                <th class="cabecalho" scope="col">Setor</th>
-                <th class="cabecalho" scope="col">E-mail</th>
-                <th class="cabecalho" scope="col">Status</th>
-                <th class="cabecalho" scope="col">Ação</th>                                                
-              </tr>
+{% include "partials/barra_navegacao.html" %}
+    
+<div class="container my-5">
+    <h2 class="mb-4">Lista de Usuários</h2>
+
+    <div class="table-responsive">
+        <table class="table table-striped table-hover">
+            <thead class="thead-light">
+                <tr>
+                    <th scope="col">ID</th>
+                    <th scope="col">Nome</th>
+                    <th scope="col">Setor</th>
+                    <th scope="col">E-mail</th>
+                    <th scope="col">Status</th>
+                    <th scope="col">Ação</th>
+                </tr>
             </thead>
             <tbody>
                 {% for usuario in usuarios %}
-                    <tr class="linha">
-                        <td class="linha">{{ usuario.id }}</td>
-                        <td class="linha">{{ usuario.nome_usuario }}</td>
-                        <td class="linha">{{ usuario.setor }}</td>
-                        <td class="linha">{{ usuario.email }}</td>
-                        <td class="linha">{{ usuario.status }}</td>
-                        <td class="linha"><button type="button" class="btn btn-warning">Editar</button></td>
+                    <tr>
+                        <td>{{ usuario.id }}</td>
+                        <td>{{ usuario.nome_usuario }}</td>
+                        <td>{{ usuario.setor }}</td>
+                        <td>{{ usuario.email }}</td>
+                        <td>{{ usuario.status }}</td>
+                        <td>
+                            <a href="#" class="btn btn-warning btn-sm">Editar</a>
+                        </td>
                     </tr>
                 {% endfor %}
             </tbody>
-          </table>
+        </table>
     </div>
+</div>
 {% endblock 'body' %}
